Fixed spacing issues for picture

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2346,6 +2346,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		left: 32%
 	}
 
 		.image img {
